# embree-gpis

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  render.sh
assets/: hair.m3hair
renders-push/: curl_gpis.ppm  out.ppm  profile.ppm  profile_gpis.ppm
src/: bsdf_deon.cpp  bsdf_deon.h  bsdf_test.cpp  camera.h  gpis_geo.cpp  gpis_geo.h  gpis_nee.cpp  gpis_nee.h  hair_loader.cpp  hair_loader.h  image.cpp  image.h  integrator.cpp  integrator.h  light.h  main.cpp  math.h  scene.cpp  scene.h  user_geo.cpp  user_geo.h
